// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.component renders with minimal props 1`] = `
"<div class=\\"sc-AykKH tctSj row sc-AykKJ duMRHg\\"><div class=\\"sc-fzXfLO hzGlg label\\"><div cols=\\"12\\" class=\\"sc-AykKI evPkqg 
        sc-AykKK gUjXDj
      \\"><label for=\\"test-id\\" class=\\"sc-fzXfLP fuIufG\\"></label></div></div></div><div class=\\"sc-AykKH tctSj row sc-fzXfLU gENaCA\\"><div cols=\\"10\\" class=\\"sc-AykKI emtNqC 
        sc-fzXfLV hMHPxM
      \\"><div class=\\"sc-fzXfMv eUXFYH input-container\\"><div class=\\"sc-fzXfMw jmMbCD\\"><div class=\\"sc-fzXfMx fVMFMz input-clear-wrap\\"><input id=\\"test-id\\" name=\\"test-id\\" type=\\"text\\" placeholder=\\"\\" autocomplete=\\"off\\" class=\\"sc-fzXfMy dUGmFQ input-default\\" value=\\"\\"></div></div></div></div></div>"
`;

exports[`Input.component renders with props 1`] = `
"<div class=\\"sc-AykKH tctSj row sc-AykKJ duMRHg\\"><div class=\\"sc-fzXfLO hzGlg label\\"><div cols=\\"12\\" class=\\"sc-AykKI evPkqg 
        sc-AykKK gUjXDj
      \\"><label for=\\"test-id\\" class=\\"sc-fzXfLP fuIufG\\">input label</label></div></div></div><div class=\\"sc-AykKH tctSj row sc-fzXfLU gENaCA\\"><div cols=\\"10\\" class=\\"sc-AykKI emtNqC 
        sc-fzXfLV hMHPxM
      \\"><div class=\\"sc-fzXfMv eUXFYH input-container\\"><div class=\\"sc-fzXfMw jmMbCD\\"><div class=\\"sc-fzXfMx fVMFMz input-clear-wrap\\"><input id=\\"test-id\\" name=\\"test-id\\" type=\\"text\\" placeholder=\\"placeholder test\\" autocomplete=\\"on\\" class=\\"sc-fzXfMy dUGmFQ input-default\\" value=\\"\\"></div></div></div></div></div>"
`;
